# Steam-Grid-Manager

./: .gitignore  README.md  package-lock.json  package.json
public/: app.js  index.html  styles.css
scripts/: start-server.ps1  tauri-build.ps1  tauri-dev.ps1
src/: server.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
